--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "defiant.js": "^2.2.7",
     "discord.js": "^12.4.1",
+    "express": "^4.17.1",
     "xml2js": "^0.4.23"
   }
 }
