--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/Federicoand98/DnD5EHelper#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "defiant.js": "^2.2.7",
-    "discord.js": "^12.4.1",
+    "discord.js": "^12.5.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
     "xml2js": "^0.4.23"
   }
 }
